[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.images",
    "/data",
    ".vscode",
    "/.github",
    ".venv",
]

[project]
name = "trajectory-sync"
version = "0.1.0"
description = "Synchronize trajectories based on their path length."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Gereon Tombrink", email = "gereon-t@users.noreply.github.com" },
]
keywords = [
    "sensor",
    "synchronization",
    "trajectory",
    "kalman-filter",
    "time-offset",
    "gnss",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gereon-t/trajectory-sync"
Source = "https://github.com/gereon-t/trajectory-sync"
Issues = "https://github.com/gereon-t/trajectory-sync/issues"
